--- a/index.html
+++ b/index.html
@@ -516,6 +516,26 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
+                        <img src="./projects/ddd.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>E-commerce</h3>
+                        <hr width=" 100%" color="wheat">
+
+                        <a href="https://deepali-delight-diary.web.app"><button class="button">
+                                <h4>LIVE DEMO</h4>
+                            </button></a>
+
+                        <div class="icons">
+                            <a href="" class="code-btn">
+                                <span class="btn-text">SOURCE CODE</span>
+                                <span class="btn-icon"><i class="fab fa-github"></i></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
                         <img src="https://img-cover.netlify.app/typing%20speed%20game.jpg" alt="">
                     </div>
                     <div class="hover-items">
